# VFRendering

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  demo.cxx  demo.py  setup.py
docs/: customdoxygen.css
include/: VectorfieldIsosurface.hxx
include/VFRendering/: ArrowRenderer.hxx  BoundingBoxRenderer.hxx  Camera.hxx  CombinedRenderer.hxx  CoordinateSystemRenderer.hxx  DotRenderer.hxx  GlyphRenderer.hxx  IsosurfaceRenderer.hxx  Options.hxx  ParallelepipedRenderer.hxx  RendererBase.hxx  SphereRenderer.hxx  SurfaceRenderer.hxx  Utilities.hxx  VectorField.hxx  VectorSphereRenderer.hxx  View.hxx
include/shaders/: dots.frag.glsl.hxx  dots.vert.glsl.hxx  isosurface.frag.glsl.hxx
python/: pybind11_glm.hpp  vfrendering_bindings.cpp
qt/: VFRenderingWidget.cxx  VFRenderingWidget.hxx  VFRenderingWidgetExample.pro  main.cxx
src/: ArrowRenderer.cxx  BoundingBoxRenderer.cxx  Camera.cxx  CombinedRenderer.cxx  CoordinateSystemRenderer.cxx  DotRenderer.cxx  GlyphRenderer.cxx  IsosurfaceRenderer.cxx  ParallelepipedRenderer.cxx  RendererBase.cxx  SphereRenderer.cxx  SurfaceRenderer.cxx  Utilities.cxx  VectorField.cxx  VectorSphereRenderer.cxx  View.cxx
src/shaders/: arrows.frag.glsl  arrows.vert.glsl  sphere_background.vert.glsl  sphere_points.frag.glsl  sphere_points.vert.glsl  surface.frag.glsl  surface.vert.glsl
